...
        child: KeyedSubtree(
          key: ValueKey(_selectedIndex),
          child: _getPage(_selectedIndex),
        ),
      ),
      bottomNavigationBar: Container(
        key: const Key('mainBottomNavBar'),
        decoration: BoxDecoration(
          color: Colors.white,
          borderRadius: const BorderRadius.only(
            topLeft: Radius.circular(24),
            topRight: Radius.circular(24),
          ),
...
