...
                                await loadMyPosts();
                              }
                            },
                            icon:
                                const Icon(Icons.settings, color: Colors.green),
                            label: const Text(
                              'Atur Profil 💼',
                              style: TextStyle(color: Colors.green),
                            ),
                            style: OutlinedButton.styleFrom(
                              side: BorderSide(color: Colors.green.shade400),
                            ),
                          ),
...
                      const Center(child: CircularProgressIndicator())
                    else if (myPosts.isEmpty) ...[
                      Center(
                        child: Column(
                          children: const [
                            Text(
                              '📸 Bagi Aktifitas Kamu!',
                              style: TextStyle(
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold,
                                  color: Colors.green),
                            ),
                            SizedBox(height: 8),
...
                          child: ElevatedButton(
                            onPressed: () {
                              setState(() {
                                itemsToShow += 10;
                              });
                            },
                            child: const Text('View More'),
                          ),
                        ),
                    ]
                  ]
                ],
              ),
...
